--- a/readable-frontend/src/App.css
+++ b/readable-frontend/src/App.css
@@ -3,6 +3,12 @@
   margin: 3px 0;
 }
 
+.postDetailButton {
+  color: black;
+  background: transparent;
+  border: none;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
