refactor: change route ath name, add edit, delete to postList...

--- a/readable-frontend/src/App.css
+++ b/readable-frontend/src/App.css
@@ -23,7 +23,7 @@
 
 .sortButtons {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   margin-bottom: 30px;
 }
 
@@ -41,6 +41,7 @@
 .postBrief {
   display: flex;
   flex-direction: column;
+  color: black;
 }
 
 .row {
